<resources>
    <string name="app_name">book_your_court</string>
    <string name="welcome_login">Welcome to the sports paradise!</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember Me</string>
    <string name="login">LOGIN</string>
    <string name="register">REGISTER</string>
    <string name="forget_password">Forget password?</string>
    <string name="show_password">Show Password</string>
    <string name="submit">SUBMIT</string>
    <string name="email">Email</string>
    <string name="set_your_new_password">Set your password</string>
    <string name="enter_your_new_password">Enter your new password</string>
    <string name="confirm_your_password">Confirm your password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string-array name="sports">
        <item>tennisHard</item>
        <item>tennisClay</item>
        <item>tennisGrass</item>
        <item>badminton</item>
        <item>basketball</item>
        <item>football</item>
    </string-array>

    <string-array name="badminton_items">
        <item>None</item>
        <item>Badminton1</item>
        <item>Badminton2</item>
        <item>Badminton3</item>
    </string-array>

    <string-array name="tennis_items">
        <item>None</item>
        <item>Tennis1</item>
        <item>Tennis2</item>
        <item>Tennis3</item>
    </string-array>


    <string-array name="volleyball_items">
        <item>None</item>
        <item>Tennis1</item>
        <item>Tennis2</item>
        <item>Tennis3</item>
    </string-array>

    <string-array name="basketball_items">
        <item>None</item>
        <item>Tennis1</item>
        <item>Tennis2</item>
        <item>Tennis3</item>
    </string-array>

    <string-array name="football_items">
        <item>None</item>
        <item>Tennis1</item>
        <item>Tennis2</item>
        <item>Tennis3</item>
    </string-array>
</resources>